--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
+    <head>
+    <link rel="stylesheet" href="style.css" />
         <title>John Josef's Personal Website</title>
+    </head>
     <body>
         <h1>Hello World!</h1>
+        <script src="script.js"></script>
     </body>
 </html>
