--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Hello World!</h1>
         <script src="script.js"></script>
+        <a href="https://www.instagram.com/wheredidmydreamsgoo">Instagram</a> 
+        <a href="https://www.twitch.tv/shin_itai">Twitch</a>
+        <a href="https://www.youtube.com/channel/UCx75_mSC6y110L3h9osXAaQ">Youtube</a>
     </body>
 </html>
