--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <body>
         <h1>Hello World!</h1>
         <script src="script.js"></script>
-        <a href="https://www.instagram.com/wheredidmydreamsgoo">Instagram</a> 
-        <a href="https://www.twitch.tv/shin_itai">Twitch</a>
-        <a href="https://www.youtube.com/channel/UCx75_mSC6y110L3h9osXAaQ">Youtube</a>
+        <p>
+        <a href="https://www.instagram.com/wheredidmydreamsgoo">Instagram</a> | 
+        <a href="https://www.twitch.tv/shin_itai">Twitch</a> |
+        <a href="https://www.youtube.com/channel/UCx75_mSC6y110L3h9osXAaQ">Youtube</a> |
+        <a href="https://www.soundcloud.com/shin_itai">Soundcloud</a> |
+        </p>
+        <p>I'm John Josef and I'm here to try to learn coding and eventually become a software engineer while working on game development on the side!</p>
     </body>
 </html>
